fix too large layout

--- a/client/stylus/css/screen.styl
+++ b/client/stylus/css/screen.styl
@@ -124,7 +124,6 @@ a
         width 13px
         height 14px
         display inline-block
-        text-indent 9999px
 
 
 h1,h2,h3
